# wavefile

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  WaveFile.h  wavefile.pro  widget.cpp  widget.h
include/: WaveFile.h  audiofileloader.h  pcmformatdialog.h  spectrogramrenderer.h  viewstate.h  waveformrenderer.h  widget.h
src/: audiofileloader.cpp  pcmformatdialog.cpp  spectrogramrenderer.cpp  viewstate.cpp  waveformrenderer.cpp  widget.cpp
tests/: CMakeLists.txt  test_wavefile.cpp
